added logic to the account creation page to send info to the server

--- a/frontend/src/templates/create_account.html
+++ b/frontend/src/templates/create_account.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Make Your Account</title>
-        <link rel="stylesheet" href="../static/css/create_account.css">
+        <link rel="stylesheet" href="/static/css/create_account.css">
     </head>
     <body>
         <div class="form-container">
@@ -22,5 +22,6 @@
             <p id="signupMessage"></p>
             <a href="/login.html">Login to an existing account</a>
         </div>
+        <script src="/static/js/create_account.js" defer></script>
     </body>
 </html>
