created html and Javascript logic for the logging in

--- a/frontend/src/templates/create_account.html
+++ b/frontend/src/templates/create_account.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Make Your Account</title>
+        <title>Create Account</title>
         <link rel="stylesheet" href="/static/css/create_account.css">
     </head>
     <body>
