--- a/frontend/src/templates/login.html
+++ b/frontend/src/templates/login.html
@@ -1,8 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Login</title>
+        <link rel="stylesheet" href="/static/css/login.css">
+    </head>
     <body>
-        <h1>
-            Go back this page is currently under construction
-        </h1>
+        <div class="form-coontainer">
+            <h2>Login</h2>
+            <form id="loginForm">
+                <input type="text" id="emailOrUsername" placeholder="Enter username or email" required>
+                </br>
+                <input type="password" id="password" placeholder="Enter Password">
+                </br>
+                <button type="submit">Login</button>
+            </form>
+            <p id="loginMessage"></p>
+            <a href="create_account.html">Don't have an account create one now</a>
+        </div>
+        <script src ="/static/js/login.js" defer></script>
     </body>
 </html>
